--- a/Thesis_Misc/css/mycss.css
+++ b/Thesis_Misc/css/mycss.css
@@ -18,3 +18,23 @@ body{
     fill-opacity: .3;
     pointer-events: all;
 }
+
+.Atype {
+    float: left;
+    margin-left: 5px;
+    margin-right: 5px;
+    border: 1px solid black;
+    width: 100px;
+    height: 30px;
+    border-radius: 1%;
+    text-align: center;
+    line-height: 30px;
+}
+
+#slider{
+    width: 200px;
+    height: 30px;
+    background: none;
+    border: none;
+    line-height: 13px;
+}
