--- a/Thesis_Misc/css/mycss.css
+++ b/Thesis_Misc/css/mycss.css
@@ -1,3 +1,8 @@
+.container {
+    width: auto;
+    margin-left: 25px;
+    margin-right: 65px;
+}
 body{
     font-family: 'PT Sans', sans-serif;
 }
@@ -18,8 +23,9 @@ body{
     fill-opacity: .3;
     pointer-events: all;
 }
-
+.Btype,
 .Atype {
+    margin-bottom: 10px;
     float: left;
     margin-left: 5px;
     margin-right: 5px;
@@ -45,8 +51,32 @@ body{
     stroke-width: .5;
 }
 
-#map{
-    display: block;
+#map {
+    clear: left;
+    width: 800px;
+    height: 900px;
+}
+
+circle:hover{
+    cursor: crosshair;
+}
+
+.charts {
+    margin: 2px;
+    background-color: white;
+    border-bottom: 1px solid #f5f5f5;
+    height: 225px;}
+
+#DataSelection{
+    margin: 2px;
+    background-color: #f5f5f5;
+    border-bottom: 1px solid gray;
+    height: 450px;
+}
+
+path {
+    stroke: #000041;
+    stroke-width: .5;
 }
 
 .a0-9 { fill:rgb(247,251,255); }
@@ -79,3 +109,5 @@ body{
 .w6-9 { fill:#383838;}
 .w7-9 { fill:#1C1C1C; }
 .w8-9 { fill:#000000; }
+
+.white {fill: white}
