--- a/Thesis_Misc/css/mycss.css
+++ b/Thesis_Misc/css/mycss.css
@@ -74,9 +74,18 @@ circle:hover{
     height: 450px;
 }
 
-path {
+.RoadPath {
     stroke: #000041;
     stroke-width: .5;
+}
+
+#context{
+    background-color: #000000;
+    height: 93%
+}
+
+#hide{
+    display: none;
 }
 
 .a0-9 { fill:rgb(247,251,255); }
@@ -89,7 +98,7 @@ path {
 .a7-9 { fill:rgb(8,81,156); }
 .a8-9 { fill:rgb(8,48,107); }
 
-.t0-9 { fill:#EFE2E2;}
+.t0-9 { fill:#FFFFFF;}
 .t1-9 { fill:#E0C6C6;}
 .t2-9 { fill:#D1AAAA;}
 .t3-9 { fill:#C18D8D;}
