--- a/Thesis_Misc/css/mycss.css
+++ b/Thesis_Misc/css/mycss.css
@@ -91,7 +91,7 @@ circle:hover{
 #DataSelection,#DataSelection1{
     margin: 2px;
     border-bottom: 1px solid #f5f5f5;
-    height: 800px;
+    height: 650px;
 }
 
 #DataSelection1{
@@ -100,7 +100,6 @@ circle:hover{
 
 
 .RoadPath {
-    stroke: #000041;
     stroke-width: .5;
 }
 
@@ -235,4 +234,22 @@ ul.tabs li.current{
     stroke: steelblue;
     stroke-width: 2;
     fill: none;
+}
+
+rect.background {
+    fill: transparent;
+}
+
+.resize rect {
+    fill: rgba(0,0,0,0.1);
+}
+
+rect.extent {
+    fill: rgba(255,255,255,0.25);
+    stroke: rgba(0,0,0,0.6);
+}
+
+.desaturate{
+    fill-opacity: 0.2 !important;
+    border: 1px lightgray solid;
 }
