--- a/Thesis_Misc/css/mycss.css
+++ b/Thesis_Misc/css/mycss.css
@@ -49,7 +49,7 @@ body{
 }
 
 
-#slider{
+.slider {
     width: 200px;
     height: 30px;
     background: none;
@@ -88,7 +88,7 @@ circle:hover{
     height: 225px;
 }
 
-#DataSelection,#DataSelection1{
+.DataSelection{
     margin: 2px;
     border-bottom: 1px solid #f5f5f5;
     height: 650px;
