--- a/Thesis_Misc/css/mycss.css
+++ b/Thesis_Misc/css/mycss.css
@@ -88,10 +88,14 @@ circle:hover{
     height: 225px;
 }
 
-.DataSelection{
+#DataSelection{
     margin: 2px;
-    border-bottom: 1px solid #f5f5f5;
-    height: 650px;
+    height: 500px;
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    overflow:auto;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
 }
 
 #DataSelection1{
@@ -253,3 +257,14 @@ rect.extent {
     fill-opacity: 0.2 !important;
     border: 1px lightgray solid;
 }
+
+#masterHead,
+table.TransitSelector{
+    margin-left: 10px !important;
+
+}
+
+td, th{
+    width: 100px
+}
+
