--- a/Thesis_Misc/css/mycss.css
+++ b/Thesis_Misc/css/mycss.css
@@ -13,7 +13,6 @@
 }
 body{
     font-family: 'PT Sans', sans-serif;
-    max-width: 1500px;
 }
 .axis text {
     font: 10px sans-serif;
@@ -65,12 +64,12 @@ body{
 
 #map,#map2, #map3, #map4, #map5{
     clear: left;
-    width: 660px;
+    width: 100%;
     height: 800px;
 }
 
 #map3 {
-    width: 660px;
+    width: 100%;
 }
 
 .btn-group-vertical{
@@ -261,10 +260,86 @@ rect.extent {
 #masterHead,
 table.TransitSelector{
     margin-left: 10px !important;
+    font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    width: 100%;
+}
+
+#masterHead th {
+   text-align: center;
+    cursor: s-resize;
+    width: 170px;
+}
+
+#masterHead{
+    width: 93%;
+    font-weight: bold;
+}
+#fullTable tr, #fullTable th{
+    border: 1px solid ghostwhite;
+}
+
+td {
+    min-width: 15%;
+    cursor: crosshair;
 
 }
 
-td, th{
-    width: 100px
+tr[class = tableRows ]:hover{
+    color: orangered;
 }
 
+.littleCharts:hover{
+    cursor: pointer;
+    border-left: 2px solid red;
+}
+
+.info, .assetLegend, .accessLegend, .tranistLegend{
+    padding: 6px 8px;
+    font: 14px/16px Arial, Helvetica, sans-serif;
+    background: white;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+}
+
+.assetLegend, .accessLegend, .tranistLegend{
+    height: 200px;
+    width: 100px;
+}
+
+.tranistLegend{
+    height: 170px;
+}
+
+.tranistLegend text{
+    font-size: 12px;
+}
+
+div.accessTip {
+    position: absolute;
+    text-align: center;
+    width: 60px;
+    height: 28px;
+    padding: 2px;
+    font: 12px sans-serif;
+    background: #f5f5f5;
+    border: 0px;
+    border-radius: 8px;
+}
+
+.no-js #loader { display: none;  }
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.se-pre-con {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-color: #ffffff;
+    margin-left: 10px;
+    color: #000041;
+    font-size: 14px;
+    font-weight: bold;
+    /*background: url(') center no-repeat #fff;*/
+}
