--- a/Thesis_Misc/css/mycss.css
+++ b/Thesis_Misc/css/mycss.css
@@ -331,6 +331,7 @@ div.accessTip {
 .js #loader { display: block; position: absolute; left: 100px; top: 0; }
 .se-pre-con {
     position: fixed;
+    float: right;
     left: 0px;
     top: 0px;
     width: 100%;
@@ -341,7 +342,6 @@ div.accessTip {
     color: #000041;
     font-size: 14px;
     font-weight: bold;
-    /*background: url(') center no-repeat #fff;*/
 }
 
 .selectedButton{
@@ -349,8 +349,9 @@ div.accessTip {
 }
 
 .fillerButton{
-    border-bottom: none;
-    border-top: none;
+    border: none;
+    z-index: -1;
+
 }
 
 #allButMenu{
