--- a/Thesis_Misc/css/mycss.css
+++ b/Thesis_Misc/css/mycss.css
@@ -293,25 +293,24 @@ tr[class = tableRows ]:hover{
     border-left: 2px solid red;
 }
 
-.info, .streetInfo, .assetLegend, .accessLegend, .tranistLegend{
+.info, .streetInfo, .assetLegend, .accessLegend, .transitLegend, .spiderLegend{
     padding: 6px 8px;
     font: 14px/16px Arial, Helvetica, sans-serif;
-    background: white;
-    background: rgba(255,255,255,0.8);
+    background-color: rgba(255,255,255,0.8);
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
     border-radius: 5px;
 }
 
-.assetLegend, .accessLegend, .tranistLegend{
+.assetLegend, .accessLegend, .transitLegend, .spiderLegend{
     height: 200px;
     width: 100px;
 }
 
-.tranistLegend{
+.transitLegend{
     height: 170px;
 }
 
-.tranistLegend text{
+.transitLegend text{
     font-size: 12px;
 }
 
